--- a/index.html
+++ b/index.html
@@ -1,74 +1,116 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>O casal Oliveira</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página do Corretor de Imóveis</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .social-links, .contact-info {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .social-links a, .whatsapp-button a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 15px;
+            background-color: #3498db;
+            border-radius: 5px;
+        }
+        .whatsapp-button a {
+            background-color: #25D366;
+        }
+        .social-links a:hover, .whatsapp-button a:hover {
+            background-color: #2980b9;
+        }
+        .whatsapp-button a:hover {
+            background-color: #20b85c;
+        }
+        form {
+            background-color: white;
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 600px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input[type="submit"] {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #2980b9;
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Bem-vindo ao nosso mundo!</h1>
-    <p>Somos o casal Oliveira, um casal de coaches especializados em relacionamentos.</p>
-  </header>
 
-  <section id="landing-page">
-    <div id="content">
-      <h2>Baixe nosso livro gratuito</h2>
-      <p>Descubra dicas valiosas para melhorar seu relacionamento.</p>
-      <button id="download-btn">Download</button>
-      <p>Entre em contato pelo WhatsApp:</p>
-      <a href="https://wa.me/SEUNUMERO" target="_blank" rel="noopener noreferrer"><img src="whatsapp-icon.png" alt="WhatsApp"></a>
-      <form id="contact-form">
-        <input type="text" placeholder="Seu nome">
-        <input type="email" placeholder="Seu e-mail">
-        <button type="submit">Enviar</button>
-      </form>
-      <div class="bio">
-        <img src="couple-photo.jpg" alt="Foto do casal">
-        <div class="biography">
-          <h3>Ygor</h3>
-          <p>Ygor é um experiente coach de relacionamentos, com mais de 10 anos de prática ajudando casais a fortalecerem seus laços.</p>
-        </div>
-        <div class="biography">
-          <h3>Aline</h3>
-          <p>Aline é uma terapeuta dedicada, especializada em comunicação não violenta e resolução de conflitos.</p>
-        </div>
-      </div>
-      <h2>Playlist no Spotify</h2>
-      <p>Desfrute de nossa seleção de músicas inspiradoras para casais:</p>
-      <a href="https://open.spotify.com/playlist/PLAYLIST_ID" target="_blank" rel="noopener noreferrer">Ouvir no Spotify</a>
-      <h2>Bônus: 7 regras para o sucesso na relação</h2>
-      <ul>
-        <li>Comunicação aberta e honesta</li>
-        <li>Respeito mútuo</li>
-        <li>Compreensão e empatia</li>
-        <li>Tempo de qualidade juntos</li>
-        <li>Manter a individualidade</li>
-        <li>Aprender a perdoar</li>
-        <li>Valorizar pequenos gestos</li>
-      </ul>
-      <h2>Cursos e Descontos</h2>
-      <div class="course">
-        <h3>Curso Intensivo de Comunicação</h3>
-        <p>Transforme sua comunicação e fortaleça seu relacionamento. <br>Preço: $99 <del>$149</del></p>
-      </div>
-      <div class="course">
-        <h3>Workshop de Resolução de Conflitos</h3>
-        <p>Aprenda estratégias eficazes para resolver conflitos de forma construtiva. <br>Preço: $79 <del>$99</del></p>
-      </div>
-      <div class="course">
-        <h3>Sessão de Coaching Individual</h3>
-        <p>Uma sessão personalizada para discutir questões específicas do seu relacionamento. <br>Preço: $49 <del>$69</del></p>
-      </div>
+    <header>
+        <h1>Corretor de Imóveis - João Silva</h1>
+        <p>Encontre seu imóvel dos sonhos!</p>
+    </header>
+
+    <div class="social-links">
+        <a href="https://www.facebook.com/corretor" target="_blank">Facebook</a>
+        <a href="https://www.instagram.com/corretor" target="_blank">Instagram</a>
+        <a href="https://www.linkedin.com/in/corretor" target="_blank">LinkedIn</a>
     </div>
-  </section>
 
-  <footer>
-    <p>Entre em contato: email@example.com</p>
-    <p>Nosso Instagram: </p>
-  </footer>
+    <div class="whatsapp-button">
+        <a href="https://wa.me/5511999999999" target="_blank">Fale com o Corretor via WhatsApp</a>
+    </div>
 
-  <script src="script.js"></script>
+    <div class="contact-info">
+        <a href="tel:+5511999999999">SAC: (11) 99999-9999</a>
+    </div>
+
+    <form action="submit_form.php" method="post">
+        <h2>Entre em Contato</h2>
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Mensagem:</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <input type="submit" value="Enviar">
+    </form>
+
+    <footer>
+        <p>&copy; 2024 Corretor de Imóveis - Todos os direitos reservados</p>
+    </footer>
+
 </body>
 </html>
