--- a/index.html
+++ b/index.html
@@ -17,66 +17,104 @@
             padding: 20px;
             text-align: center;
         }
-        .social-links, .contact-info {
+        .social-links {
             display: flex;
             justify-content: center;
             gap: 20px;
             margin: 20px 0;
         }
-        .social-links a, .whatsapp-button a {
+        .social-links a {
             color: white;
             text-decoration: none;
             padding: 10px 15px;
             background-color: #3498db;
             border-radius: 5px;
         }
-        .whatsapp-button a {
-            background-color: #25D366;
-        }
-        .social-links a:hover, .whatsapp-button a:hover {
+        .social-links a:hover {
             background-color: #2980b9;
         }
-        .whatsapp-button a:hover {
-            background-color: #20b85c;
-        }
-        form {
+        .search-filters {
             background-color: white;
             padding: 20px;
             margin: 20px auto;
             max-width: 600px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        input, textarea {
-            width: 100%;
+        .search-filters select, .search-filters input {
+            width: calc(33% - 10px);
             padding: 10px;
-            margin: 10px 0;
+            margin: 10px 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        input[type="submit"] {
+        .search-filters input[type="submit"] {
+            width: 100%;
             background-color: #3498db;
             color: white;
             border: none;
             cursor: pointer;
         }
-        input[type="submit"]:hover {
+        .search-filters input[type="submit"]:hover {
             background-color: #2980b9;
+        }
+        .property-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .property-item {
+            background-color: white;
+            padding: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .property-item img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+        .property-info {
+            padding: 10px 0;
+        }
+        .property-info h3 {
+            margin: 0;
+            color: #2c3e50;
+        }
+        .property-info p {
+            margin: 5px 0;
+            color: #7f8c8d;
+        }
+        .property-info .price {
+            color: #e74c3c;
+            font-weight: bold;
+        }
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25D366;
+            padding: 15px;
+            border-radius: 50%;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .whatsapp-button a {
+            color: white;
+            font-size: 20px;
+            text-decoration: none;
         }
         footer {
             background-color: #2c3e50;
             color: white;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Corretor de Imóveis - João Silva</h1>
+        <h1>Corretor de Imóveis - Alexie Bebici</h1>
         <p>Encontre seu imóvel dos sonhos!</p>
     </header>
 
@@ -86,27 +124,66 @@
         <a href="https://www.linkedin.com/in/corretor" target="_blank">LinkedIn</a>
     </div>
 
+    <!-- Filtros de busca -->
+    <div class="search-filters">
+        <form action="search_properties.php" method="GET">
+            <select name="price-range" required>
+                <option value="">Faixa de preço</option>
+                <option value="100000-200000">R$100.000 - R$200.000</option>
+                <option value="200000-500000">R$200.000 - R$500.000</option>
+                <option value="500000+">Acima de R$500.000</option>
+            </select>
+
+            <input type="text" name="location" placeholder="Localização" required>
+
+            <select name="size" required>
+                <option value="">Tamanho do Imóvel</option>
+                <option value="pequeno">Pequeno</option>
+                <option value="medio">Médio</option>
+                <option value="grande">Grande</option>
+            </select>
+
+            <input type="submit" value="Buscar">
+        </form>
+    </div>
+
+    <!-- Lista de imóveis -->
+    <div class="property-list">
+        <div class="property-item">
+            <img src="imovel1.jpg" alt="Foto do Imóvel 1">
+            <div class="property-info">
+                <h3>Apartamento no Centro</h3>
+                <p>Localização: Centro, São Paulo</p>
+                <p>Tamanho: 120m²</p>
+                <p class="price">R$ 350.000</p>
+            </div>
+        </div>
+
+        <div class="property-item">
+            <img src="imovel2.jpg" alt="Foto do Imóvel 2">
+            <div class="property-info">
+                <h3>Casa em bairro nobre</h3>
+                <p>Localização: Jardim Europa, São Paulo</p>
+                <p>Tamanho: 250m²</p>
+                <p class="price">R$ 1.200.000</p>
+            </div>
+        </div>
+
+        <div class="property-item">
+            <img src="imovel3.jpg" alt="Foto do Imóvel 3">
+            <div class="property-info">
+                <h3>Apartamento à beira-mar</h3>
+                <p>Localização: Copacabana, Rio de Janeiro</p>
+                <p>Tamanho: 180m²</p>
+                <p class="price">R$ 750.000</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Botão flutuante do WhatsApp -->
     <div class="whatsapp-button">
-        <a href="https://wa.me/5511999999999" target="_blank">Fale com o Corretor via WhatsApp</a>
+        <a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a>
     </div>
-
-    <div class="contact-info">
-        <a href="tel:+5511999999999">SAC: (11) 99999-9999</a>
-    </div>
-
-    <form action="submit_form.php" method="post">
-        <h2>Entre em Contato</h2>
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Mensagem:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <input type="submit" value="Enviar">
-    </form>
 
     <footer>
         <p>&copy; 2024 Corretor de Imóveis - Todos os direitos reservados</p>
