--- a/index.html
+++ b/index.html
@@ -3,191 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página do Corretor de Imóveis</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-        .social-links a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 15px;
-            background-color: #3498db;
-            border-radius: 5px;
-        }
-        .social-links a:hover {
-            background-color: #2980b9;
-        }
-        .search-filters {
-            background-color: white;
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 600px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .search-filters select, .search-filters input {
-            width: calc(33% - 10px);
-            padding: 10px;
-            margin: 10px 5px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .search-filters input[type="submit"] {
-            width: 100%;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .search-filters input[type="submit"]:hover {
-            background-color: #2980b9;
-        }
-        .property-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-        .property-item {
-            background-color: white;
-            padding: 15px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .property-item img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-        .property-info {
-            padding: 10px 0;
-        }
-        .property-info h3 {
-            margin: 0;
-            color: #2c3e50;
-        }
-        .property-info p {
-            margin: 5px 0;
-            color: #7f8c8d;
-        }
-        .property-info .price {
-            color: #e74c3c;
-            font-weight: bold;
-        }
-        .whatsapp-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #25D366;
-            padding: 15px;
-            border-radius: 50%;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .whatsapp-button a {
-            color: white;
-            font-size: 20px;
-            text-decoration: none;
-        }
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            margin-top: 20px;
-        }
-    </style>
+    <meta name="description" content="Página de apresentação de Cris Laine">
+    <title>Cris Laine - QA & Tecnologia</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
-        <h1>Corretor de Imóveis - Alexie Bebici</h1>
-        <p>Encontre seu imóvel dos sonhos!</p>
+        <nav>
+            <ul>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#contact">Contato</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Olá, eu sou Cris Laine</h1>
+            <p>Profissional de QA apaixonada por tecnologia e inovação</p>
+            <a href="#contact" class="cta-button">Entre em contato</a>
+        </div>
     </header>
 
-    <div class="social-links">
-        <a href="https://www.facebook.com/corretor" target="_blank">Facebook</a>
-        <a href="https://www.instagram.com/corretor" target="_blank">Instagram</a>
-        <a href="https://www.linkedin.com/in/corretor" target="_blank">LinkedIn</a>
-    </div>
+    <main>
+        <!-- Seção Sobre -->
+        <section id="about">
+            <h2>Sobre mim</h2>
+            <p>Sou uma profissional de Qualidade de Software com experiência em diversas áreas, incluindo automação de testes, criação de cenários BDD, e desenvolvimento de XPaths personalizados. Apaixonada por novos desafios e sempre buscando aprender mais!</p>
+        </section>
 
-    <!-- Filtros de busca -->
-    <div class="search-filters">
-        <form action="search_properties.php" method="GET">
-            <select name="price-range" required>
-                <option value="">Faixa de preço</option>
-                <option value="100000-200000">R$100.000 - R$200.000</option>
-                <option value="200000-500000">R$200.000 - R$500.000</option>
-                <option value="500000+">Acima de R$500.000</option>
-            </select>
+        <!-- Seção Habilidades -->
+        <section id="skills">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Automação de Testes</li>
+                <li>Testes Manuais</li>
+                <li>Criação de Cenários BDD</li>
+                <li>Gestão de Projetos QA</li>
+                <li>Java, Selenium, XPaths</li>
+            </ul>
+        </section>
 
-            <input type="text" name="location" placeholder="Localização" required>
-
-            <select name="size" required>
-                <option value="">Tamanho do Imóvel</option>
-                <option value="pequeno">Pequeno</option>
-                <option value="medio">Médio</option>
-                <option value="grande">Grande</option>
-            </select>
-
-            <input type="submit" value="Buscar">
-        </form>
-    </div>
-
-    <!-- Lista de imóveis -->
-    <div class="property-list">
-        <div class="property-item">
-            <img src="imovel1.jpg" alt="Foto do Imóvel 1">
-            <div class="property-info">
-                <h3>Apartamento no Centro</h3>
-                <p>Localização: Centro, São Paulo</p>
-                <p>Tamanho: 120m²</p>
-                <p class="price">R$ 350.000</p>
+        <!-- Seção Projetos -->
+        <section id="projects">
+            <h2>Projetos Recentes</h2>
+            <div class="project">
+                <h3>Portal de Vagas - SouJunior</h3>
+                <p>Desenvolvi uma funcionalidade de pesquisa de vagas para usuários logados, personalizando a experiência conforme o perfil do candidato.</p>
             </div>
-        </div>
-
-        <div class="property-item">
-            <img src="imovel2.jpg" alt="Foto do Imóvel 2">
-            <div class="property-info">
-                <h3>Casa em bairro nobre</h3>
-                <p>Localização: Jardim Europa, São Paulo</p>
-                <p>Tamanho: 250m²</p>
-                <p class="price">R$ 1.200.000</p>
+            <div class="project">
+                <h3>PHPTravels - Testes Automatizados</h3>
+                <p>Criação de testes automatizados para o site demo PHPTravels, garantindo a qualidade de seus principais componentes.</p>
             </div>
-        </div>
+        </section>
 
-        <div class="property-item">
-            <img src="imovel3.jpg" alt="Foto do Imóvel 3">
-            <div class="property-info">
-                <h3>Apartamento à beira-mar</h3>
-                <p>Localização: Copacabana, Rio de Janeiro</p>
-                <p>Tamanho: 180m²</p>
-                <p class="price">R$ 750.000</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Botão flutuante do WhatsApp -->
-    <div class="whatsapp-button">
-        <a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a>
-    </div>
+        <!-- Seção Contato -->
+        <section id="contact">
+            <h2>Contato</h2>
+            <p>Entre em contato para discutir oportunidades ou colaborações!</p>
+            <ul>
+                <li>Email: <a href="mailto:crislaine@example.com">crislaine@example.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/crislaine">linkedin.com/in/crislaine</a></li>
+            </ul>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2024 Corretor de Imóveis - Todos os direitos reservados</p>
+        <p>&copy; 2024 Cris Laine. Todos os direitos reservados.</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
